--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Set theme
-remote_theme: daviddarnes/alembic@main
-
+#remote_theme: daviddarnes/alembic@main
+remote_theme: j23414/alembic
 # File excludes
 exclude:
 - README.md
