--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ plugins:
 - jekyll-remote-theme
 
 # Site settings
-url: 'https://mydomain.com'
-baseurl: ''
+url: 'https://j23414.github.io/test_alembic_jekyll/'
+baseurl: 'https://j23414.github.io/test_alembic_jekyll/'
 title: 'My website'
 description: 'This is my new website'
 permalink: pretty
